--- a/app/src/main/res/layout/activity_patient.xml
+++ b/app/src/main/res/layout/activity_patient.xml
@@ -13,7 +13,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toTopOf="parent"
-            android:id="@+id/constraintLayout" android:background="@color/colorPrimaryDark">
+            android:id="@+id/topBarLayout" android:background="@color/colorPrimaryDark">
 
         <ImageButton
                 android:id="@+id/optionsBtn" android:layout_width="45dp"
@@ -67,7 +67,7 @@
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:id="@+id/tabLayout2"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
+            app:layout_constraintTop_toBottomOf="@+id/topBarLayout"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:tabBackground="@android:color/white" app:tabTextAppearance="@style/Body1Theme">
 
