--- a/app/src/main/res/layout/activity_patients.xml
+++ b/app/src/main/res/layout/activity_patients.xml
@@ -13,7 +13,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:id="@+id/patientsListView"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" android:footerDividersEnabled="true"
+            app:layout_constraintTop_toBottomOf="@+id/topBarLayout" android:footerDividersEnabled="true"
             android:headerDividersEnabled="false"/>
     <android.support.design.widget.FloatingActionButton
             android:layout_width="wrap_content"
@@ -30,7 +30,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toTopOf="parent"
-            android:id="@+id/constraintLayout" android:background="@color/colorPrimaryDark">
+            android:id="@+id/topBarLayout" android:background="@color/colorPrimaryDark">
 
         <TextView
                 android:text="Pacientes"
@@ -62,8 +62,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:background="@color/grey_2"
             app:layout_constraintHorizontal_bias="0.0"
-            android:id="@+id/constraintLayout2"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
+            android:id="@+id/topBarSeparator"
+            app:layout_constraintTop_toBottomOf="@+id/topBarLayout">
 
     </android.support.constraint.ConstraintLayout>
     <TextView
@@ -74,7 +74,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" android:layout_marginBottom="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/topBarLayout" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="@+id/patientsListView" app:layout_constraintVertical_bias="0.026"
             android:textAppearance="@style/Body1Theme"
     />
