--- a/app/src/main/res/layout/activity_picture.xml
+++ b/app/src/main/res/layout/activity_picture.xml
@@ -31,8 +31,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:background="@color/grey_2"
             app:layout_constraintHorizontal_bias="0.0"
-            android:id="@+id/constraintLayout2"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
+            android:id="@+id/topBarSeparator"
+            app:layout_constraintTop_toBottomOf="@+id/topBarLayout">
 
     </android.support.constraint.ConstraintLayout>
     <android.support.constraint.ConstraintLayout
@@ -41,7 +41,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toTopOf="parent"
-            android:id="@+id/constraintLayout" android:background="@color/colorPrimaryDark">
+            android:id="@+id/topBarLayout" android:background="@color/colorPrimaryDark">
 
         <TextView
                 android:text="Foto da Amostra"
@@ -71,7 +71,7 @@
             style="?android:attr/progressBarStyle"
             android:layout_width="128dp"
             android:layout_height="128dp"
-            android:id="@+id/progressBar2"
+            android:id="@+id/progressBarSampleImage"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
