--- a/app/src/main/res/layout/activity_sample.xml
+++ b/app/src/main/res/layout/activity_sample.xml
@@ -5,26 +5,16 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.example.mundim.Activities.PictureActivity" android:background="#f3f3f3">
+        tools:context="com.example.mundim.Activities.PictureActivity" android:background="#f3f3f3"
+        android:id="@+id/constraintLayout">
 
-    <android.support.constraint.ConstraintLayout
-            android:layout_width="0dp"
-            android:layout_height="1px"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:background="@color/grey_2"
-            app:layout_constraintHorizontal_bias="0.0"
-            android:id="@+id/constraintLayout2"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
-
-    </android.support.constraint.ConstraintLayout>
     <android.support.constraint.ConstraintLayout
             android:layout_width="0dp"
             android:layout_height="49dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toTopOf="parent"
-            android:id="@+id/constraintLayout" android:background="@color/colorPrimaryDark">
+            android:id="@+id/topBarLayout" android:background="@color/colorPrimaryDark">
 
         <TextView
                 android:text="Amostra"
@@ -43,13 +33,6 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginStart="8dp" android:foreground="@drawable/back_btn"/>
         <ImageButton
-                android:id="@+id/microscopeBtn" android:background="@drawable/ripple"
-                android:layout_height="45dp" android:layout_width="45dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:foreground="@drawable/microscope"
-                app:layout_constraintEnd_toStartOf="@+id/trashBtn"/>
-        <ImageButton
                 android:id="@+id/trashBtn" android:background="@drawable/ripple"
                 android:layout_height="45dp" android:layout_width="45dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -57,75 +40,151 @@
                 android:foreground="@drawable/trash2"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
     </android.support.constraint.ConstraintLayout>
-    <EditText
+    <android.support.constraint.ConstraintLayout
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:inputType="textAutoCorrect|textPersonName|textCapWords"
-            android:ems="10"
-            android:id="@+id/areaAnatomicaTextView"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
-            app:layout_constraintStart_toStartOf="parent" android:hint="Área Anatômica"
-            android:fontFamily="@font/montserrat"
-            android:typeface="normal" android:textSize="12sp" app:layout_constraintHorizontal_bias="0.0"
-            android:backgroundTint="@color/grey_1" android:textStyle="normal"
-            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/constraintLayout"/>
-    <EditText
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:inputType="textAutoCorrect|textMultiLine|textPersonName|textCapSentences|textAutoComplete"
-            android:ems="10"
-            android:id="@+id/antecedentesFamiliaresTextView" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/areaAnatomicaTextView" android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
-            app:layout_constraintStart_toStartOf="parent" android:hint="Antecedentes Familiares"
-            android:fontFamily="@font/montserrat"
-            android:typeface="normal" android:textSize="12sp" app:layout_constraintHorizontal_bias="0.0"
-            android:backgroundTint="@color/grey_1" android:textStyle="normal"/>
-    <EditText
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:inputType="textAutoCorrect|textMultiLine|textPersonName|textCapSentences|textAutoComplete"
-            android:ems="10"
-            android:id="@+id/diadnosticoDTextView" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/antecedentesFamiliaresTextView" android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
-            app:layout_constraintStart_toStartOf="parent" android:hint="Diagnóstico Dermatologista"
-            android:fontFamily="@font/montserrat"
-            android:typeface="normal" android:textSize="12sp" app:layout_constraintHorizontal_bias="1.0"
-            android:backgroundTint="@color/grey_1" android:textStyle="normal"/>
-    <EditText
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:inputType="textAutoCorrect|textMultiLine|textPersonName|textCapSentences|textAutoComplete"
-            android:ems="10"
-            android:id="@+id/diagnosticoBTextView"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
-            app:layout_constraintStart_toStartOf="parent" android:hint="Diagnóstico Biópsia"
-            android:fontFamily="@font/montserrat"
-            android:typeface="normal" android:textSize="12sp" app:layout_constraintHorizontal_bias="1.0"
-            android:backgroundTint="@color/grey_1" android:textStyle="normal"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/diadnosticoDTextView"/>
-    <ImageView android:layout_width="match_parent"
-               android:layout_height="0dp" android:id="@+id/sampleImage"
-               android:background="#f3f3f3" android:layout_marginTop="8dp"
-               app:layout_constraintTop_toBottomOf="@+id/diagnosticoBTextView"
-               app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-               android:scaleType="fitXY"
-               app:layout_constraintBottom_toTopOf="@id/constraintLayout3" android:layout_marginBottom="1px"/>
-    <ProgressBar
-            style="?android:attr/progressBarStyle"
-            android:layout_width="128dp"
-            android:layout_height="128dp"
-            android:id="@+id/progressBar2"
+            android:layout_height="1px"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintTop_toTopOf="@+id/sampleImage"
-            app:layout_constraintBottom_toBottomOf="@+id/sampleImage"
-            app:layout_constraintVertical_bias="0.41000003" android:layout_marginTop="8dp"/>
+            android:background="@color/grey_2"
+            app:layout_constraintHorizontal_bias="0.0"
+            android:id="@+id/topBarSeparator"
+            app:layout_constraintTop_toBottomOf="@+id/topBarLayout">
+
+    </android.support.constraint.ConstraintLayout>
+    <ScrollView android:layout_width="match_parent" android:layout_height="0dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/topBarLayout"
+                app:layout_constraintBottom_toTopOf="@+id/sendBtn3" app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintVertical_bias="1.0">
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" android:id="@+id/scrollviewConstraintLayout"
+                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/topBarLayout">
+
+            <EditText
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="textAutoCorrect|textPersonName|textCapWords"
+                    android:ems="10"
+                    android:id="@+id/areaAnatomicaTextView"
+                    android:hint="Área Anatômica"
+                    android:fontFamily="@font/montserrat"
+                    android:typeface="normal" android:textSize="12sp"
+                    android:backgroundTint="@color/grey_1" android:textStyle="normal"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="16dp" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="16dp"/>
+            <EditText
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="textAutoCorrect|textMultiLine|textPersonName|textCapSentences|textAutoComplete"
+                    android:ems="10"
+                    android:id="@+id/diadnosticoDTextView"
+                    android:hint="Diagnóstico Dermatologista"
+                    android:fontFamily="@font/montserrat"
+                    android:typeface="normal" android:textSize="12sp"
+                    android:backgroundTint="@color/grey_1" android:textStyle="normal"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/antecedentesFamiliaresTextView"/>
+            <ImageView android:layout_width="0dp"
+                       android:id="@+id/sampleImage"
+                       android:background="#f3f3f3"
+                       android:scaleType="centerCrop"
+                       android:layout_height="0dp"
+                       app:layout_constraintDimensionRatio="1:1"
+                       app:layout_constraintStart_toStartOf="parent"
+                       app:layout_constraintEnd_toEndOf="parent"
+                       app:layout_constraintTop_toBottomOf="@+id/labelCamera" android:layout_marginTop="8dp"/>
+            <EditText
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="textAutoCorrect|textMultiLine|textPersonName|textCapSentences|textAutoComplete"
+                    android:ems="10"
+                    android:id="@+id/diagnosticoBTextView"
+                    android:hint="Diagnóstico Biópsia"
+                    android:fontFamily="@font/montserrat"
+                    android:typeface="normal" android:textSize="12sp"
+                    android:backgroundTint="@color/grey_1" android:textStyle="normal"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/diadnosticoDTextView"/>
+            <EditText
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="textAutoCorrect|textMultiLine|textPersonName|textCapSentences|textAutoComplete"
+                    android:ems="10"
+                    android:id="@+id/antecedentesFamiliaresTextView"
+                    android:hint="Antecedentes Familiares"
+                    android:fontFamily="@font/montserrat"
+                    android:typeface="normal" android:textSize="12sp"
+                    android:backgroundTint="@color/grey_1" android:textStyle="normal"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/areaAnatomicaTextView"
+                    android:layout_marginEnd="16dp"/>
+            <ProgressBar
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="128dp"
+                    android:layout_height="128dp"
+                    android:id="@+id/progressBarSampleImage"
+                    app:layout_constraintTop_toTopOf="@+id/sampleImage"
+                    app:layout_constraintBottom_toBottomOf="@+id/sampleImage"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp"/>
+            <TextView
+                    android:text="Câmera"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/labelCamera" android:fontFamily="@font/montserrat"
+                    android:textSize="12sp" android:visibility="invisible"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/diagnosticoBTextView"/>
+            <ImageView android:layout_width="0dp"
+                       android:id="@+id/dermaImage"
+                       android:background="#f3f3f3"
+                       android:scaleType="centerCrop"
+                       android:layout_height="0dp"
+                       app:layout_constraintDimensionRatio="1:1"
+                       app:layout_constraintStart_toStartOf="parent"
+                       app:layout_constraintEnd_toEndOf="parent"
+                       app:layout_constraintTop_toBottomOf="@+id/labelDerma" android:layout_marginTop="8dp"/>
+            <TextView
+                    android:text="Dermatoscopia"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/labelDerma" android:fontFamily="@font/montserrat"
+                    android:textSize="12sp" android:visibility="invisible"
+                    android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/sampleImage" android:layout_marginTop="16dp"/>
+            <ProgressBar
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="128dp"
+                    android:layout_height="128dp"
+                    android:id="@+id/progressBarDerma"
+                    app:layout_constraintTop_toTopOf="@+id/dermaImage"
+                    app:layout_constraintBottom_toBottomOf="@+id/dermaImage"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp"/>
+        </android.support.constraint.ConstraintLayout>
+    </ScrollView>
+    <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true" app:srcCompat="@drawable/crosshair"
+            android:id="@+id/microscopeBtn"
+            app:backgroundTint="@android:color/white"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/saveBtnTopSeparator"/>
     <Button
             android:text="Salvar"
             android:layout_width="0dp"
@@ -134,13 +193,13 @@
             android:textAppearance="@style/TitleTheme" android:fontFamily="@font/montserrat" android:typeface="normal"
             android:background="@color/colorPrimaryDark" android:layout_height="51dp"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"/>
+            app:layout_constraintBottom_toTopOf="@+id/saveBtnBottomSeparator"/>
     <android.support.constraint.ConstraintLayout
             android:layout_width="0dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:background="@color/grey_2"
-            android:id="@+id/constraintLayout4"
+            android:id="@+id/saveBtnBottomSeparator"
             app:layout_constraintHorizontal_bias="0.0"
             android:layout_height="1px"
             app:layout_constraintBottom_toBottomOf="parent">
@@ -152,7 +211,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:background="@color/grey_2"
-            android:id="@+id/constraintLayout3"
+            android:id="@+id/saveBtnTopSeparator"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintBottom_toTopOf="@+id/sendBtn3">
 
