--- a/app/src/main/res/layout/fragment_patient_data2.xml
+++ b/app/src/main/res/layout/fragment_patient_data2.xml
@@ -207,7 +207,7 @@
             android:textColor="@color/colorAccent" android:textStyle="bold" android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:background="?android:selectableItemBackground" android:layout_width="200dp"
-            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
+            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/saveBtnTopSeparator"
             android:layout_marginBottom="8dp" android:capitalize="characters"/>
     <Button
             android:text="Salvar"
@@ -217,14 +217,14 @@
             android:textAppearance="@style/TitleTheme" android:fontFamily="@font/montserrat" android:typeface="normal"
             android:background="@color/colorPrimaryDark" android:layout_height="51dp"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"/>
+            app:layout_constraintBottom_toTopOf="@+id/saveBtnBottomSeparator"/>
     <android.support.constraint.ConstraintLayout
             android:layout_width="0dp"
             android:layout_height="1px"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/sendBtn" android:background="@color/grey_2"
-            android:id="@+id/constraintLayout3">
+            android:id="@+id/saveBtnTopSeparator">
 
     </android.support.constraint.ConstraintLayout>
     <android.support.constraint.ConstraintLayout
@@ -232,7 +232,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:background="@color/grey_2"
-            android:id="@+id/constraintLayout4"
+            android:id="@+id/saveBtnBottomSeparator"
             app:layout_constraintHorizontal_bias="0.0" app:layout_constraintBottom_toBottomOf="parent"
             android:layout_height="1px">
 
