--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -8,125 +8,67 @@
     <com.example.mundim.Services.AutoFitTextureView
             android:id="@+id/texture"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" tools:layout_editor_absoluteY="184dp"
+            tools:layout_editor_absoluteX="2dp"/>
     <android.support.constraint.Guideline
             android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/guideline3"
-            app:layout_constraintGuide_begin="183dp"/>
+            app:layout_constraintGuide_percent="0.25171"/>
     <android.support.constraint.Guideline
             android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/guideline5"
-            app:layout_constraintGuide_percent="0.5"/>
+            app:layout_constraintGuide_percent="0.63"/>
+    <android.support.constraint.Guideline
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/guideline7"
+            app:layout_constraintGuide_percent="0.38"/>
     <android.support.constraint.ConstraintLayout
             android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/guideline3" app:layout_constraintEnd_toStartOf="@+id/guideline5"
-            android:layout_marginEnd="150px" android:id="@+id/clUL" android:background="#000000" android:alpha="0.5">
-
-    </android.support.constraint.ConstraintLayout>
-    <android.support.constraint.ConstraintLayout
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/guideline3"
-            app:layout_constraintStart_toStartOf="@+id/guideline5" android:layout_marginStart="150px"
-            android:id="@+id/clUR" android:alpha="0.5"
-            android:background="#000000">
-
-    </android.support.constraint.ConstraintLayout>
-    <android.support.constraint.ConstraintLayout
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline5"
-            android:layout_marginTop="300px" app:layout_constraintTop_toBottomOf="@+id/clUL"
-            android:layout_marginEnd="50dp" android:id="@+id/clDL" android:background="#000000" android:alpha="0.5">
-
-    </android.support.constraint.ConstraintLayout>
-    <android.support.constraint.ConstraintLayout
-            android:layout_width="0dp"
-            android:layout_height="0dp" android:layout_marginTop="300px"
-            app:layout_constraintTop_toBottomOf="@+id/clUR"
-            app:layout_constraintStart_toStartOf="@+id/guideline5" android:layout_marginStart="50dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/clDR" android:background="#000000"
-            android:alpha="0.5">
-
-    </android.support.constraint.ConstraintLayout>
-    <android.support.constraint.ConstraintLayout
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintEnd_toStartOf="@+id/guideline5" android:layout_marginEnd="150px"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guideline3"
-            app:layout_constraintBottom_toTopOf="@+id/clDL" android:id="@+id/clML" android:alpha="0.5"
-            android:background="#000000">
+            android:layout_height="0dp"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintStart_toStartOf="@+id/guideline7" android:id="@+id/square">
 
     </android.support.constraint.ConstraintLayout>
     <android.support.constraint.ConstraintLayout
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@+id/clUR"
-            app:layout_constraintBottom_toTopOf="@+id/clDR" android:layout_marginStart="300px"
-            app:layout_constraintStart_toEndOf="@+id/clML" app:layout_constraintEnd_toEndOf="parent"
-            android:alpha="0.5" android:background="#000000" android:id="@+id/clMR">
-
-    </android.support.constraint.ConstraintLayout>
-    <android.support.constraint.ConstraintLayout
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@+id/guideline3"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/clUL" app:layout_constraintEnd_toStartOf="@+id/clUR"
-            android:id="@+id/clMU" android:alpha="0.5" android:background="#000000">
-
-    </android.support.constraint.ConstraintLayout>
-    <android.support.constraint.ConstraintLayout
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:id="@+id/constraintLayout5" android:layout_marginTop="300px"
-            app:layout_constraintTop_toBottomOf="@+id/clMU"
-            app:layout_constraintStart_toEndOf="@+id/clDL" app:layout_constraintEnd_toStartOf="@+id/clDR"
-            app:layout_constraintBottom_toBottomOf="parent" android:alpha="0.5" android:background="#000000">
-
-    </android.support.constraint.ConstraintLayout>
-    <android.support.constraint.ConstraintLayout
-            android:layout_width="1px"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="@+id/clDL"
-            app:layout_constraintTop_toTopOf="@+id/clUL"
-            app:layout_constraintEnd_toEndOf="@+id/clML" android:background="#ffffff"
-            app:layout_constraintVertical_bias="1.0" android:id="@+id/VL">
-
-    </android.support.constraint.ConstraintLayout>
-    <android.support.constraint.ConstraintLayout
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="@+id/clDL"
-            app:layout_constraintTop_toTopOf="@+id/clUL"
-            android:background="#ffffff"
-            app:layout_constraintVertical_bias="0.0" android:id="@+id/VR" app:layout_constraintEnd_toStartOf="@+id/clMR"
-            android:layout_width="1px">
-
-    </android.support.constraint.ConstraintLayout>
-    <android.support.constraint.ConstraintLayout
-            android:layout_width="0dp"
-            android:layout_height="1px" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/square" app:layout_constraintEnd_toEndOf="@+id/texture"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintBottom_toTopOf="@+id/guideline3"
-            android:id="@+id/HU" android:background="#FFFFFF">
+            app:layout_constraintTop_toTopOf="@+id/texture" android:alpha="0.75"
+            android:background="@android:color/black" android:id="@+id/constraintLayout3">
 
     </android.support.constraint.ConstraintLayout>
     <android.support.constraint.ConstraintLayout
             android:layout_width="0dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_height="1px" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toTopOf="@+id/constraintLayout5"
-            android:background="#ffffff">
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/square" app:layout_constraintEnd_toStartOf="@+id/guideline5"
+            app:layout_constraintStart_toStartOf="@+id/guideline7" app:layout_constraintBottom_toBottomOf="@+id/texture"
+            android:alpha="0.75" android:background="@android:color/black"
+            android:id="@+id/constraintLayout2">
+
+    </android.support.constraint.ConstraintLayout>
+    <android.support.constraint.ConstraintLayout
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="@+id/guideline3" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
+            app:layout_constraintStart_toStartOf="@+id/texture" android:alpha="0.75"
+            android:background="@android:color/black" android:id="@+id/constraintLayout4">
+
+    </android.support.constraint.ConstraintLayout>
+    <android.support.constraint.ConstraintLayout
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
+            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
+            app:layout_constraintEnd_toEndOf="@+id/texture"
+            app:layout_constraintStart_toEndOf="@+id/constraintLayout2" android:alpha="0.75"
+            android:background="@android:color/black" android:id="@+id/constraintLayout9">
 
     </android.support.constraint.ConstraintLayout>
     <ImageButton
@@ -137,4 +79,38 @@
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" android:layout_marginBottom="32dp"
             app:layout_constraintBottom_toBottomOf="@+id/texture"/>
+    <android.support.constraint.ConstraintLayout
+            android:layout_width="1px"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@+id/constraintLayout4"
+            android:background="@android:color/white" android:id="@+id/constraintLayout5">
+
+    </android.support.constraint.ConstraintLayout>
+    <android.support.constraint.ConstraintLayout
+            android:layout_width="1px"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:background="@android:color/white"
+            app:layout_constraintVertical_bias="1.0" app:layout_constraintStart_toStartOf="@+id/constraintLayout9">
+
+    </android.support.constraint.ConstraintLayout>
+    <android.support.constraint.ConstraintLayout
+            android:layout_width="0dp"
+            android:layout_height="1px"
+            android:background="@android:color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/texture"
+            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintBottom_toBottomOf="@+id/constraintLayout3">
+
+    </android.support.constraint.ConstraintLayout>
+    <android.support.constraint.ConstraintLayout
+            android:layout_width="0dp"
+            android:layout_height="1px"
+            android:background="@android:color/white"
+            app:layout_constraintTop_toBottomOf="@+id/square" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+    </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
